fixed #753 jfx-textfield float label alignment issue for initialized text

--- a/jfoenix/src/main/resources/css/controls/jfx-password-field.css
+++ b/jfoenix/src/main/resources/css/controls/jfx-password-field.css
@@ -23,6 +23,24 @@
     -fx-padding: 0.333333em 0 0.333333em 0;
 }
 
+.jfx-password-field > .input-line {
+    -fx-pref-height: 1px;
+    -fx-translate-y: 1px;
+    -fx-background-color: -jfx-unfocus-color;
+}
+
+.jfx-password-field:disabled > .input-line {
+    -fx-background-color: TRANSPARENT;
+    -fx-border-color: -jfx-unfocus-color;
+    -fx-border-width: 1px;
+    -fx-border-style: dashed;
+}
+
+.jfx-password-field > .input-focused-line{
+    -fx-pref-height: 2px;
+    -fx-background-color: -jfx-focus-color;
+}
+
 .jfx-password-field,
 .jfx-password-field:focused {
     -fx-prompt-text-fill: #4D4D4D;
