--- a/jfoenix/src/main/resources/css/controls/jfx-text-field.css
+++ b/jfoenix/src/main/resources/css/controls/jfx-text-field.css
@@ -23,6 +23,24 @@
     -fx-padding: 0.333333em 0 0.333333em 0;
 }
 
+.jfx-text-field > .input-line {
+    -fx-pref-height: 1px;
+    -fx-translate-y: 1px;
+    -fx-background-color: -jfx-unfocus-color;
+}
+
+.jfx-text-field:disabled > .input-line {
+    -fx-background-color: TRANSPARENT;
+    -fx-border-color: -jfx-unfocus-color;
+    -fx-border-width: 1px;
+    -fx-border-style: dashed;
+}
+
+.jfx-text-field > .input-focused-line{
+    -fx-pref-height: 2px;
+    -fx-background-color: -jfx-focus-color;
+}
+
 .jfx-text-field,
 .jfx-text-field:focused {
     -fx-background-color: TRANSPARENT, TRANSPARENT, TRANSPARENT;
